[package]
name = "zov"
version = "0.1.0"
description = "Configuration files storage with changes history, frontend and API"
keywords = ["configuration", "config", "webconfig", "json", "yaml"]
categories = ["config"]
homepage = "https://github.com/VolkovAK/zov"
repository = "https://github.com/VolkovAK/zov"
license = "MIT"
# workspace = "."
readme = "./README.md"
edition = "2021"

[dependencies]
askama = { version = "0.11.0" }
axum = "0.6.1"
axum-core = "0.3.0"
config = "0.13.3"
http = "0.2.8"
hyper = { version = "0.14.23", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
